// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`confirm finish path tooltip 1`] = `
<Tooltip
  units={Array []}
>
  <div>
    <h1 />
    <Units
      units={Array []}
    >
      <div />
    </Units>
    <Switch>
      <Route
        component={[Function]}
        computedMatch={
          Object {
            "isExact": true,
            "params": Object {},
            "path": "/confirm-finish",
            "url": "/confirm-finish",
          }
        }
        location={
          Object {
            "hash": "",
            "key": "testkey",
            "pathname": "/confirm-finish",
            "search": "",
          }
        }
        path="/confirm-finish"
      >
        <ConfirmFinishTooltip
          history={
            Object {
              "action": "POP",
              "block": [Function],
              "canGo": [Function],
              "createHref": [Function],
              "entries": Array [
                Object {
                  "hash": "",
                  "key": "testkey",
                  "pathname": "/confirm-finish",
                  "search": "",
                },
              ],
              "go": [Function],
              "goBack": [Function],
              "goForward": [Function],
              "index": 0,
              "length": 1,
              "listen": [Function],
              "location": Object {
                "hash": "",
                "key": "testkey",
                "pathname": "/confirm-finish",
                "search": "",
              },
              "push": [Function],
              "replace": [Function],
            }
          }
          location={
            Object {
              "hash": "",
              "key": "testkey",
              "pathname": "/confirm-finish",
              "search": "",
            }
          }
          match={
            Object {
              "isExact": true,
              "params": Object {},
              "path": "/confirm-finish",
              "url": "/confirm-finish",
            }
          }
        >
          <div>
            <p>
              <strong>
                Click the Done button.
              </strong>
               If you are satisfied with your defensive assignments, click the 
              <strong>
                Done
              </strong>
               button in the compass rose to end your turn.
            </p>
            <p>
              Click a territory to change defensive assignments for combat units.
            </p>
            <p>
              <strong>
                <span
                  className="warning"
                >
                  Warning:
                </span>
                 When you click the Done button, your turn will be over and you will not be able to undo any of your non-combat moves or change defensive assignments until your next turn.
              </strong>
            </p>
          </div>
        </ConfirmFinishTooltip>
      </Route>
    </Switch>
  </div>
</Tooltip>
`;

exports[`land planes path tooltip 1`] = `
<Tooltip
  units={Array []}
>
  <div>
    <h1 />
    <Units
      units={Array []}
    >
      <div />
    </Units>
    <Switch>
      <Route
        component={[Function]}
        computedMatch={
          Object {
            "isExact": true,
            "params": Object {},
            "path": "/land-planes",
            "url": "/land-planes",
          }
        }
        location={
          Object {
            "hash": "",
            "key": "testkey",
            "pathname": "/land-planes",
            "search": "",
          }
        }
        path="/land-planes"
      >
        <LandPlanesTooltip
          history={
            Object {
              "action": "POP",
              "block": [Function],
              "canGo": [Function],
              "createHref": [Function],
              "entries": Array [
                Object {
                  "hash": "",
                  "key": "testkey",
                  "pathname": "/land-planes",
                  "search": "",
                },
              ],
              "go": [Function],
              "goBack": [Function],
              "goForward": [Function],
              "index": 0,
              "length": 1,
              "listen": [Function],
              "location": Object {
                "hash": "",
                "key": "testkey",
                "pathname": "/land-planes",
                "search": "",
              },
              "push": [Function],
              "replace": [Function],
            }
          }
          location={
            Object {
              "hash": "",
              "key": "testkey",
              "pathname": "/land-planes",
              "search": "",
            }
          }
          match={
            Object {
              "isExact": true,
              "params": Object {},
              "path": "/land-planes",
              "url": "/land-planes",
            }
          }
        >
          <div>
            <p>
              <strong>
                Land all combat aircraft.
              </strong>
               Territories with combat aircraft needing to be landed are blinking.
            </p>
            <p>
              When you have landed all your combat aircraft and are ready to move to the next phase, click the "Done" button in the Indian Ocean.
            </p>
          </div>
        </LandPlanesTooltip>
      </Route>
    </Switch>
  </div>
</Tooltip>
`;

exports[`order units path tooltip 1`] = `
<Tooltip
  units={Array []}
>
  <div>
    <h1 />
    <Units
      units={Array []}
    >
      <div />
    </Units>
    <Switch>
      <Route
        component={[Function]}
        computedMatch={
          Object {
            "isExact": true,
            "params": Object {},
            "path": "/order-units",
            "url": "/order-units",
          }
        }
        location={
          Object {
            "hash": "",
            "key": "testkey",
            "pathname": "/order-units",
            "search": "",
          }
        }
        path="/order-units"
      >
        <OrderUnitsTooltip
          history={
            Object {
              "action": "POP",
              "block": [Function],
              "canGo": [Function],
              "createHref": [Function],
              "entries": Array [
                Object {
                  "hash": "",
                  "key": "testkey",
                  "pathname": "/order-units",
                  "search": "",
                },
              ],
              "go": [Function],
              "goBack": [Function],
              "goForward": [Function],
              "index": 0,
              "length": 1,
              "listen": [Function],
              "location": Object {
                "hash": "",
                "key": "testkey",
                "pathname": "/order-units",
                "search": "",
              },
              "push": [Function],
              "replace": [Function],
            }
          }
          location={
            Object {
              "hash": "",
              "key": "testkey",
              "pathname": "/order-units",
              "search": "",
            }
          }
          match={
            Object {
              "isExact": true,
              "params": Object {},
              "path": "/order-units",
              "url": "/order-units",
            }
          }
        >
          <div>
            <p>
              <strong>
                Order combat units for defense.
              </strong>
              Click on any territory or sea zone in which you have combat units to set the order in which they will be eliminated when defending.
            </p>
            <p>
              Territories with multiple combat unit types whose defenses you have not reviewed this turn are blinking. Manually set the order for the units in as many territories as you like, then click the "Order by Cost" button.
            </p>
          </div>
        </OrderUnitsTooltip>
      </Route>
    </Switch>
  </div>
</Tooltip>
`;

exports[`plan attacks path tooltip 1`] = `
<Tooltip
  units={Array []}
>
  <div>
    <h1 />
    <Units
      units={Array []}
    >
      <div />
    </Units>
    <Switch>
      <Route
        component={[Function]}
        computedMatch={
          Object {
            "isExact": true,
            "params": Object {},
            "path": "/plan-attacks",
            "url": "/plan-attacks",
          }
        }
        location={
          Object {
            "hash": "",
            "key": "testkey",
            "pathname": "/plan-attacks",
            "search": "",
          }
        }
        path="/plan-attacks"
      >
        <PlanCombatTooltip
          history={
            Object {
              "action": "POP",
              "block": [Function],
              "canGo": [Function],
              "createHref": [Function],
              "entries": Array [
                Object {
                  "hash": "",
                  "key": "testkey",
                  "pathname": "/plan-attacks",
                  "search": "",
                },
              ],
              "go": [Function],
              "goBack": [Function],
              "goForward": [Function],
              "index": 0,
              "length": 1,
              "listen": [Function],
              "location": Object {
                "hash": "",
                "key": "testkey",
                "pathname": "/plan-attacks",
                "search": "",
              },
              "push": [Function],
              "replace": [Function],
            }
          }
          location={
            Object {
              "hash": "",
              "key": "testkey",
              "pathname": "/plan-attacks",
              "search": "",
            }
          }
          match={
            Object {
              "isExact": true,
              "params": Object {},
              "path": "/plan-attacks",
              "url": "/plan-attacks",
            }
          }
        >
          <div>
            <p>
              <strong>
                Make your combat moves.
              </strong>
               Click on an enemy territory or sea zone you wish to attack, any sea zone you need to move supporting units to, or friendly territory you wish to blitz to.
            </p>
            <p>
              <strong>
                When you are done making your combat moves, click the "Done" button in the Indian Ocean.
              </strong>
            </p>
          </div>
        </PlanCombatTooltip>
      </Route>
    </Switch>
  </div>
</Tooltip>
`;

exports[`plan movement path tooltip 1`] = `
<Tooltip
  units={Array []}
>
  <div>
    <h1 />
    <Units
      units={Array []}
    >
      <div />
    </Units>
    <Switch>
      <Route
        component={[Function]}
        computedMatch={
          Object {
            "isExact": true,
            "params": Object {},
            "path": "/plan-movement",
            "url": "/plan-movement",
          }
        }
        location={
          Object {
            "hash": "",
            "key": "testkey",
            "pathname": "/plan-movement",
            "search": "",
          }
        }
        path="/plan-movement"
      >
        <NonCombatMovementTooltip
          history={
            Object {
              "action": "POP",
              "block": [Function],
              "canGo": [Function],
              "createHref": [Function],
              "entries": Array [
                Object {
                  "hash": "",
                  "key": "testkey",
                  "pathname": "/plan-movement",
                  "search": "",
                },
              ],
              "go": [Function],
              "goBack": [Function],
              "goForward": [Function],
              "index": 0,
              "length": 1,
              "listen": [Function],
              "location": Object {
                "hash": "",
                "key": "testkey",
                "pathname": "/plan-movement",
                "search": "",
              },
              "push": [Function],
              "replace": [Function],
            }
          }
          location={
            Object {
              "hash": "",
              "key": "testkey",
              "pathname": "/plan-movement",
              "search": "",
            }
          }
          match={
            Object {
              "isExact": true,
              "params": Object {},
              "path": "/plan-movement",
              "url": "/plan-movement",
            }
          }
        >
          <div>
            <p>
              <strong>
                Make your non-combat moves.
              </strong>
               Click on any friendly territory or sea zone you wish to move units to.
            </p>
            <p>
              When you are done making your non-combat moves, click the 
              <strong>
                Done
              </strong>
               button in the compass rose.
            </p>
            <p>
              You cannot move units used in combat this turn.
            </p>
            <p>
              Territories 
              <strong>
                to
              </strong>
               which you have made non-combat moves will blink. You may click on those territories to change your moves.
            </p>
          </div>
        </NonCombatMovementTooltip>
      </Route>
    </Switch>
  </div>
</Tooltip>
`;

exports[`repair path tooltip 1`] = `
<Tooltip
  units={Array []}
>
  <div>
    <h1 />
    <Units
      units={Array []}
    >
      <div />
    </Units>
    <Switch>
      <Route
        component={[Function]}
        computedMatch={
          Object {
            "isExact": true,
            "params": Object {},
            "path": "/repair",
            "url": "/repair",
          }
        }
        location={
          Object {
            "hash": "",
            "key": "testkey",
            "pathname": "/repair",
            "search": "",
          }
        }
        path="/repair"
      >
        <RepairTooltip
          history={
            Object {
              "action": "POP",
              "block": [Function],
              "canGo": [Function],
              "createHref": [Function],
              "entries": Array [
                Object {
                  "hash": "",
                  "key": "testkey",
                  "pathname": "/repair",
                  "search": "",
                },
              ],
              "go": [Function],
              "goBack": [Function],
              "goForward": [Function],
              "index": 0,
              "length": 1,
              "listen": [Function],
              "location": Object {
                "hash": "",
                "key": "testkey",
                "pathname": "/repair",
                "search": "",
              },
              "push": [Function],
              "replace": [Function],
            }
          }
          location={
            Object {
              "hash": "",
              "key": "testkey",
              "pathname": "/repair",
              "search": "",
            }
          }
          match={
            Object {
              "isExact": true,
              "params": Object {},
              "path": "/repair",
              "url": "/repair",
            }
          }
        >
          <div>
            <p>
              <strong>
                Repair damaged capital ships.
              </strong>
               Click on any sea zone in which you have damaged capital ships (battleships or aircraft carriers) in a friendly naval base to repair the damage.
            </p>
            <p>
              Territories with ships you can repair this turn are blinking. After you have reviewed each of these territories, you will be able to proceed to R&D.
            </p>
            <p>
              <strong>
                When you are satisfied with your choices for repair, click the "Done" button in the Indian Ocean.
              </strong>
            </p>
          </div>
        </RepairTooltip>
      </Route>
    </Switch>
  </div>
</Tooltip>
`;

exports[`resolve combat path tooltip 1`] = `
<Tooltip
  units={Array []}
>
  <div>
    <h1 />
    <Units
      units={Array []}
    >
      <div />
    </Units>
    <Switch>
      <Route
        component={[Function]}
        computedMatch={
          Object {
            "isExact": true,
            "params": Object {},
            "path": "/resolve-combat",
            "url": "/resolve-combat",
          }
        }
        location={
          Object {
            "hash": "",
            "key": "testkey",
            "pathname": "/resolve-combat",
            "search": "",
          }
        }
        path="/resolve-combat"
      >
        <ResolveCombatTooltip
          history={
            Object {
              "action": "POP",
              "block": [Function],
              "canGo": [Function],
              "createHref": [Function],
              "entries": Array [
                Object {
                  "hash": "",
                  "key": "testkey",
                  "pathname": "/resolve-combat",
                  "search": "",
                },
              ],
              "go": [Function],
              "goBack": [Function],
              "goForward": [Function],
              "index": 0,
              "length": 1,
              "listen": [Function],
              "location": Object {
                "hash": "",
                "key": "testkey",
                "pathname": "/resolve-combat",
                "search": "",
              },
              "push": [Function],
              "replace": [Function],
            }
          }
          location={
            Object {
              "hash": "",
              "key": "testkey",
              "pathname": "/resolve-combat",
              "search": "",
            }
          }
          match={
            Object {
              "isExact": true,
              "params": Object {},
              "path": "/resolve-combat",
              "url": "/resolve-combat",
            }
          }
        >
          <div>
            <p>
              <strong>
                Resolve all combat.
              </strong>
               Click on an enemy territory or sea zone you are attacking. Territories with combat needing to be resolved are on fire, "The World at War"-style.
            </p>
            <p>
              You can choose the order in which the battles are fought, but you will not be able to fight more than one battle at a time. Each battle will need to be fully resolved in order to begin the next one. Amphibious assault units will need to have their sea zone battle resolved before the land battle can begin.
            </p>
          </div>
        </ResolveCombatTooltip>
      </Route>
    </Switch>
  </div>
</Tooltip>
`;

exports[`root shows initial tooltip for current player 1`] = `
<Tooltip
  playing={true}
  units={Array []}
>
  <div>
    <h1 />
    <Units
      units={Array []}
    >
      <div />
    </Units>
    <Switch>
      <Route
        computedMatch={
          Object {
            "isExact": true,
            "params": Object {},
            "path": "/",
            "url": "/",
          }
        }
        exact={true}
        location={
          Object {
            "hash": "",
            "key": "testkey",
            "pathname": "/",
            "search": "",
          }
        }
        path="/"
        render={[Function]}
      >
        <StartTooltip
          playing={true}
        >
          <div>
            <p>
              This is the start of your turn. You are playing 
              <strong />
               for the 
              <strong />
              .
            </p>
            <p>
              Click anywhere on the map to start.
            </p>
          </div>
        </StartTooltip>
      </Route>
    </Switch>
  </div>
</Tooltip>
`;

exports[`root shows initial tooltip for other player 1`] = `
<Tooltip
  playing={false}
  units={Array []}
>
  <div>
    <h1 />
    <Units
      units={Array []}
    >
      <div />
    </Units>
    <Switch>
      <Route
        computedMatch={
          Object {
            "isExact": true,
            "params": Object {},
            "path": "/",
            "url": "/",
          }
        }
        exact={true}
        location={
          Object {
            "hash": "",
            "key": "testkey",
            "pathname": "/",
            "search": "",
          }
        }
        path="/"
        render={[Function]}
      >
        <StartTooltip
          playing={false}
        >
          <div>
            <p>
              It is 
              <strong />
              's turn.
            </p>
            <p>
              You may send messages to other players while you wait for your next turn.
            </p>
          </div>
        </StartTooltip>
      </Route>
    </Switch>
  </div>
</Tooltip>
`;
